# app-calculator

./: Kconfig  README.md  meson.build
dts/: sample.dts
src/: calculator.c  calculator.h  console.c  console.h  main.c  meson.build  print.c  print.h  stm32_usart_driver.c  stm32_usart_driver.h
subprojects/: merlin.wrap
tests/: calculator_cli.c  meson.build
